--- a/css/slider.css
+++ b/css/slider.css
@@ -1,11 +1,11 @@
 .swiper-container {
-    width: 100vw;
+    max-width: 100%;
     max-height: 400px;
     padding: 4%;
 }
 
 .swiper-wrapper {
-    margin: 20px 0px;
+    margin: 0 auto;
 }
 
 .swiper-pagination {
